# telegram-reddit-moderating-bot

./: .gitignore  LICENSE  README.md
tg-bot-reddit/: .env.example  Cargo.toml
tg-bot-reddit/src/: handlers.rs  main.rs  reddit.rs  reddit_schemas.rs
