[package]
name = "tg-bot-reddit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12.2", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros", "signal"] }
reqwest = {version = "0.11.18", features = ["json"]}
serde_json = "1.0.96"
anyhow = {version = "1.0.71", features = ["backtrace"]}
reddit = "0.0.0"
serde = {version = "1.0.163", features = ["derive"]}
pretty_trace = "0.5.23"
